--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 波兰-190.2KB/s(Youtube:不良林), server: 217.30.10.64, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-703.1KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 波兰-694.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-581.9KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-830.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 🇻🇳 越南-9.47MB/s(Youtube:不良林), server: hn.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hn.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 波兰-190.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-703.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 波兰-694.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 波兰-830.6KB/s(Youtube:不良林)
       - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
