--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-694.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-581.9KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 波兰-830.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇻🇳 越南-9.47MB/s(Youtube:不良林), server: hn.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hn.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 波兰-721.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
+  - {name: 波兰-1.01MB/s(Youtube:不良林), server: 217.30.10.64, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇰🇷 韩国-1.69MB/s(Youtube:不良林), server: 193.123.232.191, port: 1167, type: vmess, uuid: 840c3605-84af-498b-87e2-3f8404080345, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.27MB/s(Youtube:不良林), server: v2.godlight.xyz, port: 27000, type: vmess, uuid: 1a059eff-ad8a-42ad-921c-465c5b31f183, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /dajdklw231f, ws-headers: {Host: v2.godlight.xyz}}
+  - {name: 🇸🇬 新加坡-3.58MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
+  - {name: 未知国家-4.56MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-694.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-581.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 波兰-830.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 波兰-1.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
+      - 未知国家-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
