--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-721.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
-  - {name: 波兰-1.01MB/s(Youtube:不良林), server: 217.30.10.64, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇰🇷 韩国-1.69MB/s(Youtube:不良林), server: 193.123.232.191, port: 1167, type: vmess, uuid: 840c3605-84af-498b-87e2-3f8404080345, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-967.4KB/s(Youtube:不良林), server: ss-node-1.gfwairport.net, port: 50001, type: ss, cipher: chacha20-ietf-poly1305, password: d3bd4f04-f99b-4905-9916-bac87c728277}
+  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 波兰-721.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 🇯🇵 日本-2.27MB/s(Youtube:不良林), server: v2.godlight.xyz, port: 27000, type: vmess, uuid: 1a059eff-ad8a-42ad-921c-465c5b31f183, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /dajdklw231f, ws-headers: {Host: v2.godlight.xyz}}
   - {name: 🇸🇬 新加坡-3.58MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
   - {name: 未知国家-4.56MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 波兰-721.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
       - 未知国家-4.56MB/s(Youtube:不良林)
