--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-967.4KB/s(Youtube:不良林), server: ss-node-1.gfwairport.net, port: 50001, type: ss, cipher: chacha20-ietf-poly1305, password: d3bd4f04-f99b-4905-9916-bac87c728277}
-  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 波兰-721.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇯🇵 日本-2.27MB/s(Youtube:不良林), server: v2.godlight.xyz, port: 27000, type: vmess, uuid: 1a059eff-ad8a-42ad-921c-465c5b31f183, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /dajdklw231f, ws-headers: {Host: v2.godlight.xyz}}
-  - {name: 🇸🇬 新加坡-3.58MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
-  - {name: 未知国家-4.56MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.36MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.92MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.11MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-1.49MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
+  - {name: 🇩🇪 德国-3.50MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.10MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.26MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-967.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 波兰-721.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.58MB/s(Youtube:不良林)
-      - 未知国家-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
+      - 未知国家-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
