--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 51.89.81.132, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.81.132}}
-  - {name: 🇺🇸 美国-206.8KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-4.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-977.4KB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: wg.nfeng6.pp.ua, port: 52217, type: vmess, uuid: 4e66672a-184c-30e4-900a-a19004c38e85, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-977.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
