--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,27 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 获取节点异常，请在下个时段重试, server: 1.1.1.1, port: 6666, type: ss, cipher: none, password: "@buliang00"}
+  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.84MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -36,20 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -65,7 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 获取节点异常，请在下个时段重试
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
